<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark"
    tools:context=".Home">
<!--Hello-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/htitle"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="@string/home"
            android:textColor="@color/gray_light"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnTitle"
            android:layout_width="315dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            app:backgroundTint="@null"
            android:background="@drawable/header_bg"
            android:drawableLeft="@drawable/logo_80"
            android:fontFamily="@font/bold"
            android:gravity="end"
            android:paddingTop="10dp"
            android:text="@string/title"
            android:textAlignment="textEnd"
            android:textColor="@color/dark"
            android:textSize="18dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="315dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/notice" />

        <TextView
            android:id="@+id/hschedule"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/semibold"
            android:text="@string/schedule"
            android:textColor="@color/gray_light"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtfrom"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/semibold"
            android:paddingLeft="12dp"
            android:text="FROM"
            android:textColor="@color/gray_light"
            android:textSize="14dp" />


        <Spinner
            android:id="@+id/spnmonth"
            android:layout_width="315dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/secondary_spinner"
            android:entries="@array/stations"
            android:padding="5dp" />

        <TextView
            android:id="@+id/txtto"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/semibold"
            android:paddingLeft="12dp"
            android:text="TO"
            android:textColor="@color/gray_light"
            android:textSize="14dp" />

        <Spinner
            android:id="@+id/spnstto"
            android:layout_width="315dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/secondary_spinner"
            android:entries="@array/stations"
            android:padding="5dp" />

        <TextView
            android:id="@+id/txtdate"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/semibold"
            android:paddingLeft="12dp"
            android:text="DATE"
            android:textColor="@color/gray_light"
            android:textSize="14dp"/>

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/primary_button"
                android:fontFamily="@font/regular"
                android:text="FIND"
                android:textColor="@color/dark"
                android:textSize="20dp" />

            <Button
                android:id="@+id/logout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                app:backgroundTint="@null"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="CLEAR"
                android:textColor="@color/yellow"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>